# coq-evm

./: .gitignore  _CoqProject  coq-evm.opam
.github/workflows/: coq.yml
Arith/: Nibble.v  UInt63.v  UInt64.v
Containers/: Vec16.v
Crypto/: BLAKE2b.v  Keccak.v  RIPEMD160.v  SHA256.v
Lib2/: Arith2.v
test/gen_tests/: blake.go  go.mod
