opam-version: "2.0"
name: "coq-evm"
version: "0.1"
synopsis: "Coq EVM primitives"
description: """
Hash primitives of the Ethereum Virtual Machine (EVM) in Coq
"""
maintainer: "Guillaume Claret <dev@clarus.me>"
authors: [
  "Ilya https://github.com/formalize"
]
license: "AGPL-3.0"
homepage: "https://github.com/formalize/coq-evm"
bug-reports: "https://github.com/formalize/coq-evm/issues"
dev-repo: "git+https://github.com/formalize/coq-evm.git"
depends: [
  "coq" {>= "8.17"}
]
build: [
  ["./configure"]
  [make "-j%{jobs}%"]
]
install: [make "install"]
